--- a/estilo.css
+++ b/estilo.css
@@ -24,6 +24,7 @@ body {
 
 	display: grid;
 	grid-gap: 30px;
+	grid-template-columns: repeat(1, 1fr);
 	grid-template-areas: "daniel"
 						 "jonathan"
 						 "jeanette"
@@ -41,6 +42,7 @@ body {
 	width: 110px;
 	height: 110px;
 	position: absolute;
+	z-index: 1;
 	top: 0;
 	right: 10px;
 	border-radius: 0;
@@ -64,6 +66,8 @@ body {
 	width: 30px;
 	height: 30px;
 	border: 2px solid hsl(264deg 82% 70%);
+	position: relative;
+	z-index: 100;
 }
 
 .daniel h2,
@@ -73,6 +77,8 @@ body {
 	font-size: 14px;
 	display: inline;
 	color: var(--light-grayish-blue);
+	position: relative;
+	z-index: 100;
 }
 
 .jeanette h2,
@@ -90,6 +96,8 @@ body {
 	color: var(--light-gray);
 	opacity: 50%;
 	display: inline;
+	position: relative;
+	z-index: 100;
 }
 
 .jeanette span,
@@ -114,7 +122,7 @@ body {
 
 .patrick h3 {
 	font-size: 20px;
-	color: var(--light-gray);
+	color: var(--light-grayish-blue);
 }
 
 .jeanette h3,
@@ -182,6 +190,7 @@ body {
 	}
 
 	.grid-container {
+		grid-template-columns: repeat(4, 1fr);
 		grid-template-areas: "daniel   daniel   jonathan   kira"
 							 "jeanette patrick  patrick    kira "
 	}
